# StairwayDetection

./: CMakeLists.txt  config.yaml  package.xml  stair_detection.rviz
cfg/: StairDetection.cfg
include/stair_detection/: StairVector.h  Stairs.h  normal_3d_omp.h  planeshape.h  preanalysis.h  recognition.h  region_growing.h  regiongrowing.h  regions.h  ros_functions.hpp  splitmerge.h  voxSAC.h
include/stair_detection/impl/: normal_3d.hpp  normal_3d_omp.hpp
include/stairs/: StairVector.h  Stairs.h  planeshape.h  preanalysis.h  recognition.h  regiongrowing.h  ros_functions.hpp
launch/: run_example_bag.launch  run_example_pcd.launch  run_stair_detection.launch  stair_detection.launch  stair_detection_w_paramargs.launch
src/: StairVector.cpp  Stairs.cpp  example_stairs_publisher.cpp  planeshape.cpp  preanalysis.cpp  recognition.cpp  regiongrowing.cpp  regions.cpp  segmentPatch.cpp  splitmerge.cpp  stairDetectionMain.cpp  stair_detection_node.cpp  voxSAC.cpp
